test/expected/explain_main_fippi_i.out
explain int main( int, int** )
                           ^
28: error: invalid main() parameter type "int**"; must be "char**"
